--- a/mittun/templates/events/index.html
+++ b/mittun/templates/events/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block 'body' %}
+{% block body %}
 <h1>Mittun - Conference Manager</h1>
 <h2>Events</h2>
 {% endblock %}
