Removed delete from test

--- a/mittun/templates/base.html
+++ b/mittun/templates/base.html
@@ -7,9 +7,11 @@
 {% endblock %}
 </head>
 <body>
+<div>
 {% block body %}
     <!-- body content goes here o/ -->
 {% endblock %}
+</div>
 </body>
 </html>
 
