--- a/mittun/templates/base.html
+++ b/mittun/templates/base.html
@@ -1,9 +1,12 @@
+{% load static %}
+{% get_static_prefix as STATIC_PREFIX %}
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 {% block head %}
     <title>Mittun - Conference Manager</title>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_PREFIX }}css/reset.css" />
 {% endblock %}
 </head>
 <body>
