--- a/mittun/templates/events/index.html
+++ b/mittun/templates/events/index.html
@@ -3,4 +3,14 @@
 {% block body %}
 <h1>Mittun - Conference Manager</h1>
 <h2>Events</h2>
+
+<div>
+    <dl>
+        {% for event in events %}
+            <dt>{{ event.name }}</dt>
+            <dd>{{ event.date }}</dd>
+        {% endfor %}
+    </dl>
+</div>
+
 {% endblock %}
