Suporting html in event's description

--- a/mittun/events/templates/event_detail.html
+++ b/mittun/events/templates/event_detail.html
@@ -1,5 +1,5 @@
 <dl>
     <dt><h3>{{ event.name }}</h3></dt>
     <dd>{{ event.date }}</dd>
-    <dd>{{ event.description }}</dd>
+    <dd>{{ event.description|safe }}</dd>
 </dl>
