--- a/mittun/templates/base.html
+++ b/mittun/templates/base.html
@@ -4,10 +4,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-{% block head %}
+{% block title %}
     <title>Mittun - Conference Manager</title>
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_PREFIX }}css/reset.css" />
 {% endblock %}
+
+<link rel="stylesheet" type="text/css" href="{{ STATIC_PREFIX }}css/reset.css" />
+<link rel="stylesheet" type="text/css" href="{{ STATIC_PREFIX }}css/text.css" />
+<link rel="stylesheet" type="text/css" href="{{ STATIC_PREFIX }}css/960.css" />
+
+{% block css %}
+{% endblock %}
+
 </head>
 <body>
 {% block body %}
