--- a/mittun/events/templates/event_form.html
+++ b/mittun/events/templates/event_form.html
@@ -54,7 +54,7 @@
     ================================================== -->
     <div class="row">
         <div class="span12">
-            <form action="" method="POST">
+            <form action="" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <input type="submit" name="save" value="save">
